<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/baby_green">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:background="@drawable/sushitastic" />

    <TextView
        android:id="@+id/txt_food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="sushitastic"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="24sp"
        android:letterSpacing=".23" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:elevation="16dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="e-mail"
            android:textAllCaps="true"
            android:textColor="@color/dark_green"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/email_enter"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/input_layout"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="password"
            android:textAllCaps="true"
            android:textColor="@color/dark_green"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/password_enter"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:background="@drawable/input_layout"
            android:padding="10dp" />

        <CheckBox
            android:id="@+id/show_pass"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="show password"
            android:textAllCaps="true" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="SIGN IN"
        android:textColor="@color/white"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/register_link"
        android:textColor="@color/blue_link"
        android:background="@color/transparent"/>

</LinearLayout>